--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,9 @@
     "@mui/material": "^5.10.12",
     "@mui/styles": "^5.14.0",
     "@mui/x-date-pickers": "^5.0.8",
-    "axios": "^1.1.3",
+    "axios": "^1.4.0",
     "chart.js": "^4.0.1",
+    "file-saver": "^2.0.5",
     "formik": "^2.2.9",
     "http-server": "^14.1.1",
     "moment": "^2.29.4",
@@ -21,11 +22,13 @@
     "react-chartjs-2": "^5.0.1",
     "react-dom": "^17.0.0",
     "react-scripts": "^5.0.1",
+    "react-to-pdf": "^0.0.14",
+    "react-to-print": "^2.14.13",
+    "react-tsparticles": "^1.29.0",
+    "tsparticles": "^1.31.0",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11",
-    "yup-phone": "^1.3.2",
-    "tsparticles": "^1.31.0",
-    "react-tsparticles": "^1.29.0"
+    "yup-phone": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
