--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,18 +12,21 @@
     "@mui/material": "^5.10.12",
     "@mui/styles": "^5.14.0",
     "@mui/x-date-pickers": "^5.0.8",
+    "@testing-library/user-event": "^14.4.3",
     "axios": "^1.1.3",
     "chart.js": "^4.0.1",
     "date-fns": "^2.30.0",
     "file-saver": "^2.0.5",
     "formik": "^2.2.9",
     "http-server": "^14.1.1",
+    "jest": "^29.6.2",
     "moment": "^2.29.4",
     "react": "^17.0.0",
     "react-chartjs-2": "^5.0.1",
     "react-dom": "^17.0.0",
     "react-scripts": "^5.0.1",
     "react-tsparticles": "^1.29.0",
+    "ts-jest": "^29.1.1",
     "tsparticles": "^1.31.0",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11",
@@ -32,7 +35,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest --config jest.config.js",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -52,5 +55,15 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.22.9",
+    "@babel/preset-env": "^7.22.9",
+    "@babel/preset-react": "^7.22.5",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^12.0.0",
+    "babel-jest": "^29.6.2",
+    "jest-environment-jsdom": "^29.6.2",
+    "jest-transform-stub": "^2.0.0"
   }
 }
