--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,9 @@
     "chart.js": "^4.0.1",
     "date-fns": "^2.30.0",
     "file-saver": "^2.0.5",
-    "formik": "^2.2.9",
+    "formik": "^2.4.2",
     "http-server": "^14.1.1",
+    "material-ui-chip-input": "^1.1.0",
     "jest": "^29.6.2",
     "moment": "^2.29.4",
     "react": "^17.0.0",
