--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -16,6 +16,13 @@ spring.datasource.tomcat.min-idle=8
 spring.datasource.tomcat.default-auto-commit=true
 spring.output.ansi.enabled=ALWAYS
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=careersatconnects@gmail.com
+spring.mail.password=jwxomcldkfkkzypx
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=1234
