--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@mui/material": "^5.10.12",
     "@mui/styles": "^5.14.0",
     "@mui/x-date-pickers": "^5.0.8",
+    "@react-pdf/renderer": "^3.1.12",
     "@testing-library/user-event": "^14.4.3",
     "axios": "^1.1.3",
     "chart.js": "^4.0.1",
@@ -21,9 +22,11 @@
     "http-server": "^14.1.1",
     "jest": "^29.6.2",
     "moment": "^2.29.4",
+    "mui-chips-input": "^2.0.2",
     "react": "^17.0.0",
     "react-chartjs-2": "^5.0.1",
     "react-dom": "^17.0.0",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "^5.0.1",
     "react-tsparticles": "^1.29.0",
     "ts-jest": "^29.1.1",
