--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -14,7 +14,7 @@
 	<name>backend</name>
 	<description>Software Engineering Process Backend CodeBase</description>
 	<properties>
-		<java.version>11</java.version>
+		<java.version>15</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -98,6 +98,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+				<version>3.10.1</version>
                 <configuration>
                     <source>15</source>
                     <target>15</target>
