--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,11 @@
     "yup": "^0.32.11",
     "yup-phone": "^1.3.2"
   },
+  "jest": {
+    "moduleFileExtensions": ["js", "jsx"],
+    "testEnvironment": "node",
+    "type": "module" 
+  },  
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
