--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.profiles.active=default
 
+server.port=8090
+
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.jdbc.batch_size = 20
 spring.jpa.properties.hibernate.order_inserts = true
